--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_mlkit_text_recognition: ^0.5.0
   image_picker: ^0.8.6+3
   path_provider: ^2.0.13
+  openfoodfacts: ^1.30.1
+  
 
 dev_dependencies:
   flutter_test:
