--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
     
 
 
@@ -41,7 +42,13 @@ dependencies:
   google_mlkit_text_recognition: ^0.5.0
   image_picker: ^0.8.6+3
   path_provider: ^2.0.13
-  openfoodfacts: ^1.30.1
+  chat_gpt_api: ^1.0.2
+  flutter_chatgpt_api: ^1.1.0
+  
+  
+  
+  
+  
   
 
 dev_dependencies:
