--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   path_provider: ^2.0.13
   chat_gpt_api: ^1.0.2
   flutter_chatgpt_api: ^1.1.0
+  http: ^0.13.5
+  loading_animation_widget: ^1.2.0+4
+  chat_gpt_sdk: ^2.0.0
+  velocity_x: ^3.6.0
+  flutter_dotenv: ^5.0.2
   
   
   
